
 o DGraph: now interpret text anchors and espaced sequences correctly
 o 'make -j' works again
 o new implementation Persistent.Digraph.ConcreteBidirectionalLabeled
 o new implementation Persistent.Digraph.ConcreteBidirectional
 o Makefile: bug fixed when ocamlc (resp. ocamlopt) and ocamlc.opt
   (resp. ocamlopt.opt) are unconsistent

version 1.5, April 29, 2010
---------------------------
 o Makefile: bug fixed when installing ocamlgraph with ocamlfind
   (patch by Virgile Prevosto)
 o DGraph: new method set_zoom_padding in DgraphView.view
 o Traverse.Dfs.has_cycle: can now be used on undirected graphs as well,
   and is now tail recursive
 o DGraph: handle dotted ellipse

version 1.4, March 24, 2010
---------------------------
 o new function [clear] for imperative graphs
 o new implementation Imperative.Digraph.ConcreteBidirectionalLabeled
   (contribution of Jaap Boender)
 o Dgraph displays graphs faster
 o DGraph: several bugs fixed
 o DGraph: several API changes
   (may break compatibility with existing development)

version 1.3, October 2, 2009
----------------------------
 o Oper.mirror: undirected graphs are not copied anymore
 o Oper.mirror: fixed bug (isolated vertices were lost)
 o Graphviz: new signature GraphWithDotAttrs
 o Improvements of Dgraph
 o Configure: better test for detecting lablgtk
 o OcamlGraph is now installed by default in `ocamlc -where`/ocamlgraph
 o Viewgraph is now packed in a single module Viewgraph (break compatibility
   with previous version)
 o Dgraph is now packed in a single module Dgraph (break compatibility with
   previous version)
 o Makefile: fixed bug when the installation directory of binaries does not
             exist
 o Makefile: fixed bug of ocamldep under Windows

version 1.2, August 31, 2009
----------------------------
 o experimental: new GTK-based graph viewer called Dgraph
   (viewGraph is now deprecated)
 o added Delaunay.iter_triangles (not of use in Ocamlgraph, actually)

version 1.1, June 23, 2009